# Cpp-web-server

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Errors.md  HTTP.md  Makefile  README.md  server  vcpkg.json
docs/: advanced.md  api.md  architecture.md  extension.md  intro.md  usage.md
examples/: api_server.cpp  static_server.cpp
include/: ActionDispatcher.h  AppDispatcher.h  HTTPRequest.h  HTTPResponse.h  Router.h  StaticServer.h  ThreadPool.h
include/NanoHost/: ActionDispatcher.h  AppDispatcher.h  NanoHost.h  Router.h  StaticServer.h
public/: index.html
src/: ActionDispatcher.cpp  AppDispatcher.cpp  HTTPRequest.cpp  HTTPResponse.cpp  Router.cpp  StaticServer.cpp  ThreadPool.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt  http_tests.cpp  router_tests.cpp  static_tests.cpp
